--- a/index.html
+++ b/index.html
@@ -26,6 +26,6 @@
         <button id="new-game">Start New Game</button>
     </div>
 
-    <script src="script.js"></script>
+    <script src="app.js"></script>
 </body>
 </html>
